--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -3,6 +3,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: var;
 }
 
   .header {
@@ -16,6 +17,8 @@ body {
     width: 100%;
     background-color: white;
     z-index: 2;
+    filter: drop-shadow(0 0 0.50rem grey);
+    padding-bottom: 2%;
   }
 
   .header_link {
@@ -23,10 +26,12 @@ body {
     text-decoration: none;
     color: black;
     width: 15%;
+    margin-left: 3%;
   }
 
   .nav {
     padding-top: 10px;
+    margin-right: 3%;
   }
 
   .nav a {
@@ -34,6 +39,10 @@ body {
     color: black;
     font-size: 18px;
     padding-right: 12px;
+  }
+
+  .nav a:hover {
+    font-weight: bolder;
   }
 
   .hero__background {
@@ -44,29 +53,19 @@ body {
   .section__presentation {
     color: black;
     width: 30%;
-    height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    padding-left: 10%;
+    padding-left: 20%;
     padding-top: 10%;
   }
 
   .section__presentation h1 {
-    font-size: 50px;
+    font-size: 40px;
+    width: 80%;
+    z-index: 3;
   }
 
-  .section__presentation p {
-    font-size: 20px;
-  }
-
-  .github__button {
-    width: 20%;
-    background-color: black;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
 
   .about-me__section {
     width: 100%;
@@ -97,14 +96,62 @@ body {
     background-color: black;
     color: white;
     font-size: 12px;
+    cursor: pointer;
   }
 
+  .skills__section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .skills__grey_background {
+    width: 80%;
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: center;
+  }
+
+  .skills__allSkills {
+    width: 90%;
+    height: 90%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .skills__div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .skills__img_div {
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+
+  .skills__img {
+    width: 100%;
+    height: fit-content;
+    filter: drop-shadow(0 0 0.50rem grey);
+  }
+
+
   .section__galerie {
-    background-color: #F6F6F6;
-    border-radius: 20px;
     margin-right: 0px;
     width: 100%;
     z-index: 1;
+  }
+
+  .section__galerie h2 {
+    text-align: center;
   }
 
   .card {
@@ -113,13 +160,20 @@ body {
     gap: 45px;
     grid-template-columns: repeat(auto-fill, minmax(21rem, 1fr));
     padding: 30px;
-    position: relative;
   }
 
   .card__img {
     width: 100%;
     cursor: pointer;
+    filter: drop-shadow(0 0 0.50rem grey);
+    transition-property: transform;
+    transition-duration: 1000ms;
   }
+
+  .card__img:hover {
+    transform: scale(1.1);
+  }
+
 
   .footer__section {
     height: 200px;
