--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -6,6 +6,7 @@ body {
   font-family: var;
 }
 
+
   .header {
     display: flex;
     flex-direction: row;
@@ -32,6 +33,8 @@ body {
   .nav {
     padding-top: 10px;
     margin-right: 3%;
+    flex-wrap: wrap;
+    display: flex;
   }
 
   .nav a {
@@ -53,8 +56,9 @@ body {
   .section__presentation {
     color: black;
     width: 30%;
+    height: 80%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     padding-left: 20%;
     padding-top: 10%;
@@ -62,8 +66,7 @@ body {
 
   .section__presentation h1 {
     font-size: 40px;
-    width: 80%;
-    z-index: 3;
+    width: 100%;
   }
 
 
@@ -91,12 +94,18 @@ body {
   }
 
   .cv_button {
-    width: 50%;
+    width: 100px;
+    height: 20px;
     border: 0.5px solid white;
-    background-color: black;
-    color: white;
+    background-color: whitesmoke;
+    color: black;
     font-size: 12px;
     cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 2%;
+    border-color: black;
+    filter: drop-shadow(0 0 0.50rem grey);
   }
 
   .skills__section {
@@ -111,6 +120,7 @@ body {
     background-color: whitesmoke;
     display: flex;
     justify-content: center;
+    background: linear-gradient(180deg, rgba(234, 231, 231, 0) 0%, rgba(118, 115, 115, 0.5) 100%);
   }
 
   .skills__allSkills {
@@ -160,11 +170,53 @@ body {
   .footer_left {
     margin-left: 10%;
     margin-top: 20px;
+    width: 50%;
   }
 
   .footer_right {
     margin-right: 20%;
     margin-top: 20px;
+    width: 50%;
+  }
+
+  @media screen and (max-width: 600px) {
+    .nav {
+      display: grid;
+    }
+    .nav a {
+      font-size: 22px;
+    }
+
+    .section__presentation {
+      height: 100%;
+    }
+
+    .about-me__section_text {
+      width: 50%;
+    }
+
+    .skills__allSkills{
+      margin: 0;
+      height: 100%;
+      width: 100%;
+    }
+
+    .footer_left {
+      margin-left: 2%;
+    }
+
+    .footer_right {
+      margin-right: 2%;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .footer_left {
+      font-size: 12px;
+    }
+    .footer_right {
+      font-size: 12px;
+    }
   }
 
 
