--- a/src/Style/test.css
+++ b/src/Style/test.css
@@ -6,6 +6,10 @@
     padding: 30px;
 }
 
+.projets_title {
+    text-align: center;
+}
+
 .projet_div {
     position: relative;
     display: flex;
@@ -14,17 +18,25 @@
     border-radius: 50px;
     overflow: hidden;
     transition: all 0.2s ease-in-out;
-    background-color: grey;
+    cursor: pointer;
     }
 
     .projet_div:hover{
         transform: scale(1.1);
     }
 
+    .projet_div:before {
+        content: "";
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+      }
+
     .projet_picture:hover {
         transform: scale(1.2);
         transition: all 0.4s ease-in-out;
-        filter: opacity(6%);
     }
 
 
@@ -33,35 +45,39 @@
     width: 100%;
 }
 
+.projet_text {
+  transition: opacity 0.2s ease-in-out;
+  margin: 10%;
+  font-size: 20px;
+  text-align: center;
+  color: white;
+}
 
 
-.text_section {
+
+.projet_div {
+    position: relative;
+  }
+  
+  .text_section {
     position: absolute;
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.4s;
-    flex-direction: column;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    gap: 15px;
-}
-
-.text_section {
-    visibility: hidden;
+    background-color: rgba(9, 9, 9, 0.5);
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+  }
+  
+  .projet_div:hover .text_section {
     opacity: 1;
-    position: absolute;
-}
+    background-color: darkslategrey;
+    filter: opacity(85%);
+  }
 
-
-
-
-
-.projet_text:hover {
-    
-    font-size: 20px;
-    color: white;
-    visibility: visible;
-    opacity: 1;
-    position: absolute;
-}
-
+  @media screen and (max-width: 389px) {
+    .projet_div {
+        max-width: 300px;
+    }
+  }
